--- a/css/resume.css
+++ b/css/resume.css
@@ -8,7 +8,7 @@
     width: 100%;
     display: flex;
     position: relative;
-    background-color: #f70606;
+    background-color: #0ac2eb;
 }
 .social-icons{
     position: absolute;
